First areas in HTML

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,16 @@
 	<link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
+
+	<h1>BOOTCAMP CASINO</h1>
+
+	<div class="background"></div>
+
+	<div class="deck_area"></div>
+
+	<div class="dealer_area"></div>
+	<div class="player_area"></div>
+
 	<script src="/js/jquery-3.3.1.min.js"></script>
 	<script src="/js/index.js"></script>
 	<script>
