--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
 	<div class="dealer_area"></div>
 	<div class="player_area"></div>
 
+	<button id="deal_btn">DEAL</button>
+	<button id="hit_btn">HIT</button>
+	<button id="stand_btn">STAND</button>
+
 	<script src="/js/jquery-3.3.1.min.js"></script>
 	<script src="/js/index.js"></script>
 	<script>
