added card values

--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,19 @@
 	card.createHTML_card_image();
 
 	console.log(card);
+	console.log(card.value);
+	//var score_player = card.value
+
+
+	
+
+	console.log(card.value);
+
+
+
+
 	});
 
-        
        
 
         
